# Rust

./: .env  Cargo.toml  README.md
src/: main.rs
src/config/: database.rs
src/controllers/: doctor_controller.rs  user_controller.rs
src/models/: doctor.rs  user.rs
src/response/: error_response.rs
src/service/: doctor_service.rs
