[package]
name = "rust_api_klinika"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"  # проверь на crates.io для последней версии
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "runtime-async-std", "postgres"] }
dotenv = "0.15"
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }